tests/ui/indexing/point-at-index-for-obligation-failure.stderr
error[E0277]: the type `HashMap<String, String>` cannot be indexed by `&&str`
  --> $DIR/point-at-index-for-obligation-failure.rs:5:9
   |
LL |         &s
   |         ^^ `HashMap<String, String>` cannot be indexed by `&&str`
   |
   = help: the trait `Index<&&str>` is not implemented for `HashMap<String, String>`, which is required by `HashMap<String, String>: Index<&_>`
   = help: the trait `Index<&Q>` is implemented for `HashMap<K, V, S>`
   = note: required for `HashMap<String, String>` to implement `Index<&&str>`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
